View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0030931 | Open CASCADE | OCCT:Visualization | public | 2019-09-01 13:16 | 2019-09-07 16:27 |
Reporter | kgv | Assigned To | apn | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.3.0 | ||||
Target Version | 7.4.0 | Fixed in Version | 7.4.0 | ||
Summary | 0030931: Visualization, TKOpenGl - do not render into GL_FRONT within "GDI Generic" renderer | ||||
Description | Software OpenGL implementation on modern Windows platforms (GL_VENDOR: "Microsoft Corporation", GL_RENDERER: "GDI Generic", GL_VERSION: "1.1.0") provides extremely slow implementation when rendering into GL_FRONT buffer. Therefore, it is better disabling drawing into GL_FRONT in this case by default. Note that "vimmediatefront 0" causes no rendering to window, which is a regression after 0029138. | ||||
Steps To Reproduce | pload MODELING VISUALIZATION box b 1 2 3 vclear vcaps -softMode 1 #vcaps -maxVersion 1 1 -noExtensions 1 vinit View1 vaxo vdisplay b -dispMode 1 vfit vrotate 0.2 0.2 0 #vimmediatefront 0 | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR30931 has been created by kgv. SHA-1: 4c944731667dd02353bdc9fdd30c81137ee4c201 Detailed log of new commits: Author: kgv Date: Sun Sep 1 13:19:40 2019 +0300 0030931: Visualization, TKOpenGl - do not render into GL_FRONT within "GDI Generic" renderer OpenGl_Workspace now disables at initialization time OpenGl_View::SetImmediateModeDrawToFront() property in case of "GDI Generic" OpenGL implementation. OpenGl_View::redrawImmediate() - fixed no buffer swap in case of myTransientDrawToFront without offscreen FBO. |
|
Branch CR30931 has been updated forcibly by kgv. SHA-1: 9051dbbe9b8b4c92e1b1f543ced3fb517a9fbb35 |
|
Patch is ready for review. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR30931-master-KGV/ |
|
Branch CR30931 reviewed without remarks |
|
Combination - OCCT branch : CR30931 master SHA - 9051dbbe9b8b4c92e1b1f543ced3fb517a9fbb35 5f5b1aed1c6e139bbd34314eca77ae7abcd8895c Products branch : master SHA - 34e9bf11c6b525830b5dee35839707da81e7d1ab was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16183.990000000016 / 16167.270000000033 [+0.10%] Products Total CPU difference: 10497.07000000004 / 10484.930000000048 [+0.12%] Windows-64-VC14: OCCT Total CPU difference: 18453.046875 / 18256.515625 [+1.08%] Products Total CPU difference: 12088.453125 / 12168.265625 [-0.66%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR30931 has been deleted by inv. SHA-1: 9051dbbe9b8b4c92e1b1f543ced3fb517a9fbb35 |
occt: master 1202160b 2019-09-01 10:19:40 Committer: apn Details Diff |
0030931: Visualization, TKOpenGl - do not render into GL_FRONT within "GDI Generic" renderer OpenGl_Workspace now disables at initialization time OpenGl_View::SetImmediateModeDrawToFront() property in case of "GDI Generic" OpenGL implementation. OpenGl_View::redrawImmediate() - fixed no buffer swap in case of myTransientDrawToFront without offscreen FBO. |
Affected Issues 0030931 |
|
mod - src/OpenGl/OpenGl_View_Redraw.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_Workspace.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2019-09-01 13:16 | kgv | New Issue | |
2019-09-01 13:16 | kgv | Assigned To | => kgv |
2019-09-01 13:25 | git | Note Added: 0086593 | |
2019-09-01 13:35 | kgv | Relationship added | related to 0029138 |
2019-09-01 13:36 | kgv | Product Version | => 7.3.0 |
2019-09-01 13:42 | git | Note Added: 0086594 | |
2019-09-01 13:43 | kgv | Note Added: 0086595 | |
2019-09-01 13:43 | kgv | Assigned To | kgv => san |
2019-09-01 13:43 | kgv | Status | new => resolved |
2019-09-01 15:20 | kgv | Relationship added | related to 0024525 |
2019-09-01 15:21 | kgv | Description Updated | |
2019-09-01 16:27 | kgv | Note Edited: 0086595 | |
2019-09-02 19:03 | san | Note Added: 0086671 | |
2019-09-02 19:03 | san | Assigned To | san => bugmaster |
2019-09-02 19:03 | san | Status | resolved => reviewed |
2019-09-02 19:12 | apn | Test case number | => Not needed |
2019-09-02 19:12 | apn | Note Added: 0086673 | |
2019-09-02 19:12 | apn | Status | reviewed => tested |
2019-09-07 11:38 | apn | Changeset attached | => occt master 1202160b |
2019-09-07 11:38 | apn | Assigned To | bugmaster => apn |
2019-09-07 11:38 | apn | Status | tested => verified |
2019-09-07 11:38 | apn | Resolution | open => fixed |
2019-09-07 16:27 | git | Note Added: 0086944 |